# gTerm

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  cmake_install.cmake  gTerm.rc  readme.md  vcpkg.json
.github/workflows/: release.yml
gTerm/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigManager_linux.cpp  DebugMenu.cpp  DebugMenu.h  Makefile  Notes.txt  cmake_install.cmake  dataParser.cpp  dataParser.h  dataPlotter.cpp  dataPlotter.h  gTerm.cpp  gTerm.h  logger.h  mainMenu.cpp  mainMenu.h  terminal.cpp  terminal.h  terminal_output.cpp  terminal_output.h  textselect.cpp
gTerm/serial/: CircularQueue.cpp  CircularQueue.h  LinuxSerialComm.cpp  LinuxSerialComm.h  RS232Comm.cpp  RS232Comm.h  SerialComm.h  serial.cpp  serial.h  serialManager.cpp  serialManager.h  virtualComm.h
res/: gTerm.desktop
test_utilities/: serialGen3.ino  serial_generator_utility.py
test_utilities/ADXL335_serial/: ADXL335_serial.ino
test_utilities/serialGen3/: serialGen3.ino
